--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
 		"@aws-sdk/client-dynamodb": "^3.421.0",
 		"@aws-sdk/client-secrets-manager": "^3.454.0",
 		"@aws-sdk/lib-dynamodb": "^3.421.0",
-		"@discordjs/opus": "^0.9.0",
 		"@discord-player/extractor": "^4.5.1",
+		"discord-player": "^6.7.1",
 		"discord.js": "^14.13.0",
 		"dotenv": "^16.0.2",
+		"mediaplex": "^0.0.9",
 		"node-fetch": "^3.3.2",
 		"uuid": "^9.0.0",
-		"ytdl-core": "^4.11.5",
-		"discord-player": "^6.7.1"
+		"ytdl-core": "^4.11.5"
 	}
 }
