--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
 		"@aws-sdk/client-secrets-manager": "^3.454.0",
 		"@aws-sdk/lib-dynamodb": "^3.421.0",
 		"@discord-player/extractor": "^4.5.1",
+		"@discordjs/opus": "^0.9.0",
 		"discord-player": "^6.7.1",
 		"discord.js": "^14.13.0",
 		"dotenv": "^16.0.2",
-		"mediaplex": "^0.0.9",
 		"node-fetch": "^3.3.2",
 		"node-pre-gyp": "^0.17.0",
 		"rebuild": "^0.1.2",
