--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"discord-player": "^6.7.1",
 		"discord.js": "^14.13.0",
 		"dotenv": "^16.0.2",
+		"mediaplex": "^0.0.9",
 		"node-fetch": "^3.3.2",
 		"uuid": "^9.0.0",
 		"ytdl-core": "^4.11.5"
