--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"@aws-sdk/lib-dynamodb": "^3.421.0",
 		"@discord-player/extractor": "^4.5.1",
 		"@discordjs/opus": "^0.9.0",
+		"@evan/opus": "^1.0.3",
 		"discord-player": "^6.7.1",
 		"discord.js": "^14.13.0",
 		"dotenv": "^16.0.2",
