--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"@discordjs/opus": "^0.9.0",
 		"@evan/opus": "^1.0.3",
 		"discord-player": "^6.7.1",
+		"discord-player-youtubei": "^1.3.3",
 		"discord.js": "^14.13.0",
 		"dotenv": "^16.0.2",
 		"mediaplex": "^0.0.9",
